influxdb/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      volumes:
        - name: influxdb-pv-storage
          persistentVolumeClaim:
            claimName: influxdb-pv-claim
      containers:
        - image: influxdb:1.8.3
          name: influxdb
          ports:
          - containerPort: 8086
          volumeMounts:
          - mountPath: "/var/lib/influxdb"
            name: influxdb-pv-storage
