influxdb/chronograf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chronograf
  labels:
    app: chronograf
spec:
  selector:
    app: chronograf
  ports:
  - port: 80
    name: http
    targetPort: 8888
