influxdb/cronograf-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chronograf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: chronograf.sievert.fun
    http:
      paths:
      - backend:
          serviceName: chronograf
          servicePort: 8888
  tls:
  - hosts:
    - chronograf.sievert.fun
    secretName: chronograf-cert
