influxdb/influxdb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inflxudb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: influxdb.sievert.fun
    http:
      paths:
      - backend:
          serviceName: influxdb
          servicePort: 8086
  tls:
  - hosts:
    - influxdb.sievert.fun
    secretName: influxdb-cert
